--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -1,6 +1,7 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/mydb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    # 注意：将 URL 用引号包起来，避免 YAML 将 & 当作别名标记解析
+    url: "jdbc:mysql://localhost:3306/mydb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true"
     username: myuser
     password: mypass
     driver-class-name: com.mysql.cj.jdbc.Driver
