轮播图接口修改

--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -16,7 +16,7 @@ spring:
         format_sql: true
 
   flyway:
-    enabled: true
+    enabled: false
     locations: classpath:db/migration
 
 app:
