解决一些报错

--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -18,7 +18,8 @@ spring:
   flyway:
     enabled: false
     locations: classpath:db/migration
-
+    baseline-on-migrate: true
+    baseline-version: 0
 app:
   upload-dir: uploads
 
