--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
+            <version>10.20.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-mysql</artifactId>
+            <version>10.20.1</version>
         </dependency>
 
         <!-- H2 用于本地测试（runtime） -->
