--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,19 @@
-# ??? MySQL ??
-# spring.datasource.url=jdbc:mysql://localhost:3306/demo_db
-# spring.datasource.username=root
-# spring.datasource.password=rootpass
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# ini
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=myuser
+spring.datasource.password=mypass
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ?? H2 ??
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.h2.console.enabled=true
+spring.h2.console.enabled=false
 
-spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+spring.flyway.baseline-on-migrate=true
+spring.flyway.clean-disabled=false
+spring.flyway.baseline-version=0
